# GhostAudience

./: .gitattributes  .gitignore  .npmrc  GHOST_AUDIENCE_FINAL_IMPLEMENTATION_BLUEPRINT_FAQ_VERIFIED.md  README.md  biome.json  dependency-cruiser.cjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json
.github/workflows/: ci.yml  security.yml  submission-gate.yml
apps/studio/: .dev.vars.example  .env.cloudflare-production  .env.production  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.jsonc
apps/studio/public/: _headers
apps/studio/src/: main.tsx
apps/studio/tests/: analysis-page.test.tsx  map-model-output.test.ts  setup.ts  (+2 more)
docs/: DEPLOYMENT.md  DEPLOYMENT_RECORD.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  EXPERIENCE_REBUILD.md  LONG_INPUT_RECOVERY.md  OWNER_ACTIONS.md  PRODUCT_CONTRACT.md  PROJECT_STATUS.md  VERIFICATION.md
docs/BOB/: README.md
docs/DECISIONS/: ADR-0001-BOOTSTRAP-CORRECTIONS.md  ADR-0002-TEST-HARDENING.md
docs/submission/: BOB_EVIDENCE.md  CHECKLIST.md  ELIGIBILITY_SELF_CHECK.md  IP_AND_ASSETS.md  PROJECT_PAGE_COPY.md  SKILLSBUILD.md  VIDEO_SCRIPT.md
migrations/: 0001_rate_limits.sql
tools/evaluation/: pyproject.toml
tools/evaluation/src/ghost_audience_eval/: __init__.py  cli.py  gates.py  metrics.py  models.py
tools/evaluation/tests/: __init__.py  test_cli.py  test_metrics_and_gates.py
tools/repository/: check-placeholders.mjs  extract-blueprint.mjs  verify-fixture-manifests.mjs  verify-no-future-keys.mjs
(+120 files in other folders)
