[project]
name = "ghost-audience-eval"
version = "0.1.0"
description = "Golden-dataset and model-evaluation tools"
requires-python = "==3.13.*"
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "rich==14.3.3",
  "typer==0.21.0"
]

[project.scripts]
ghost-audience-eval = "ghost_audience_eval.cli:app"

[dependency-groups]
dev = [
  "hypothesis==6.151.9",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "respx==0.22.0",
  "ruff==0.15.7"
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_audience_eval"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D212"
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=ghost_audience_eval",
  "--cov-report=term-missing",
  "--cov-fail-under=90"
]